--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section id="lp__navigation">
       <div class="row">
-        <nav>
+        <nav class="lp__nav">
           <figure>
             <svg xmlns="http://www.w3.org/2000/svg" width="146" height="24">
               <g fill="none" fill-rule="evenodd">
@@ -34,6 +34,34 @@
               </g>
             </svg>
           </figure>
+          <ul class="nav__links">
+            <li>
+              <a href="#" class="nav__link"
+                ><span class="blue">Pricing</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav__link"
+                ><span class="blue">Product</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav__link"
+                ><span class="blue">About Us</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav__link"
+                ><span class="blue">Careers</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav__link"
+                ><span class="blue">Community</span></a
+              >
+            </li>
+          </ul>
+          <button class="btn__get-started">Get Started</button>
         </nav>
       </div>
     </section>
