--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
         </nav>
       </div>
     </section>
+    <section id="landing__page">
+      <div class="row"></div>
+    </section>
   </body>
 </html>
