--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
             >
             <div class="lp__title-para">
               <p>
-                Manage makes it simple for software teams<br />
-                to plan day-to-day tasks while keeping the<br />
-                larger team goals in view.
+                <span class="grey">
+                  Manage makes it simple for software teams<br />
+                  to plan day-to-day tasks while keeping the<br />
+                  larger team goals in view.
+                </span>
               </p>
             </div>
             <button class="btn__get-started">Get Started</button>
@@ -329,7 +331,59 @@
     </section>
     <section id="info">
       <div class="row">
-        <div class="info"></div>
+        <div class="info">
+          <div class="info__left">
+            <h4 class="info__title">
+              <span class="blue"
+                >What's different about<br />
+                Manage?</span
+              >
+            </h4>
+            <p class="info__para">
+              <span class="grey"
+                >Manage provides all the functionality your<br />
+                team needs, without the complexity. Our<br />
+                software is tailor-made form odern digital<br />
+                product teams.</span
+              >
+            </p>
+          </div>
+          <div class="info__right">
+            <h5 class="info__right-title">
+              <span class="blue">Track company-wide progress</span>
+            </h5>
+            <p class="info__right-para">
+              <span class="grey"
+                >See how your day-to-day tasks fit into the wider vision.<br />
+                Go from tracking progress at the milestone level all the<br />
+                way done to the smalest of details. Never lose sight of<br />
+                the bigger picture again.</span
+              >
+            </p>
+            <h5 class="info__right-title">
+              <span class="blue">Advanced built-in reports</span>
+            </h5>
+            <p class="info__right-para">
+              <span class="grey"
+                >Set internal delivery estimates and tradck progress toward<br />
+                company goals. Our customisable dashboard helps you<br />
+                build out the reports you need to keep the key stakeholders<br />
+                informed.</span
+              >
+            </p>
+            <h5 class="info__right-title">
+              <span class="blue">Everything you need in one place</span>
+            </h5>
+            <p class="info__right-para">
+              <span class="grey"
+                >Stop jumping from one service to another to<br />
+                communicate, store files, track tasks and share<br />
+                documents. Manage offers an all-in-one team<br />
+                productivity solution.</span
+              >
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
